# docs/swagger.json
@@ -3681,6 +3681,43 @@
                 }
             }
         },
+        "practitioner.RsPractitioner": {
+            "type": "object",
+            "properties": {
+                "abn": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/practitioner.RsUserInfo"
+                },
+                "verified": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "practitioner.RsUserInfo": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                }
+            }
+        },
         "response.RsError": {
             "type": "object",
             "properties": {
